--- a/service/.vscode/settings.json
+++ b/service/.vscode/settings.json
@@ -60,5 +60,6 @@
         "istream": "cpp",
         "ostream": "cpp",
         "sstream": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/devenv/workspace/service/pruebas_cmake"
 }
